rough site visual layout

--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 </head>
 <body>
     
+    <h1 id="title">FOOD TRUCK</h1>
+
+    <main>
+        <h3 id="menu">Menu</h3>
+        <hr>
+        <p>Blah</p>
+        <p>blah</p>
+        <p>Blah</p>
+        <p>blah</p>
+        <p>Blah</p>
+        <p>blah</p>
+        <p>Blah</p>
+        <p>blah</p>
+    </main>
+    
 </body>
 </html>
