--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,24 @@
 </head>
 <body>
     
-    <h1 id="title">FOOD TRUCK</h1>
+    <h1 id="title">FARTHEST CORNERS</h1>
 
     <main>
-        <h3 id="menu">Menu</h3>
+        <h2 id="menu">Menu</h3>
         <hr>
-        <p>Blah</p>
-        <p>blah</p>
-        <p>Blah</p>
-        <p>blah</p>
-        <p>Blah</p>
-        <p>blah</p>
-        <p>Blah</p>
-        <p>blah</p>
+
+        <h2 id="menu">Entrees</h2>
+        <h3 id="menuitem">Cheeseburger</h3>
+        <p id="itemdetails">$12.99  |  Cheeseburger and Fries</p>
+        <h3 id="menuitem">Double Cheeseburger</h3>
+        <p id="itemdetails">$14.99  |  Double Cheeseburger and Fries</p>
+        <h3 id="menuitem">Hoddock Sandwich</h3>
+        <p id="itemdetails">$11.99  |  Hoddock Sandwich and Fries</p>
+        <hr>
+
+        <h2 id="menu">Drinks</h2>
+        <h3 id="menuitem">Pepsi</h3>
+        <p id="itemdetails">$2.50 |  Cold Bottle of Pepsi</p>
     </main>
     
 </body>
