events button a little work in the site.js

--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,13 @@
     <h1 id="title">FARTHEST CORNERS</h1>
 
     <main>
+        <button id="btnEvent">Check Out Our Events</button>
         <h2 id="menu">Menu</h3>
-        <hr>
+            <hr>
 
-        <h2 id="menu">Entrees</h2>
-        <h3 id="menuitem">Cheeseburger</h3>
-        <p id="itemdetails">$12.99  |  Cheeseburger and Fries</p>
-        <h3 id="menuitem">Double Cheeseburger</h3>
-        <p id="itemdetails">$14.99  |  Double Cheeseburger and Fries</p>
-        <h3 id="menuitem">Hoddock Sandwich</h3>
-        <p id="itemdetails">$11.99  |  Hoddock Sandwich and Fries</p>
-        <hr>
+            <div id="menuDiv">
 
-        <h2 id="menu">Drinks</h2>
-        <h3 id="menuitem">Pepsi</h3>
-        <p id="itemdetails">$2.50 |  Cold Bottle of Pepsi</p>
+            </div>
     </main>
     
 </body>
