--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,29 @@
 
         <h2 id="menu">Entrees</h2>
         <h3 id="menuitem">Cheeseburger</h3>
-        <p id="itemdetails">$12.99  |  Cheeseburger and Fries</p>
-        <h3 id="menuitem">Double Cheeseburger</h3>
-        <p id="itemdetails">$14.99  |  Double Cheeseburger and Fries</p>
-        <h3 id="menuitem">Hoddock Sandwich</h3>
-        <p id="itemdetails">$11.99  |  Hoddock Sandwich and Fries</p>
+        <p id="itemdetails">$12.85  |  Burger with Cheese</p>
+        <h3 id="menuitem">Lobster</h3>
+        <p id="itemdetails">$10.92  |  Fresh Lobster with butter, garlic and salt.</p>
+        <h3 id="menuitem">Sausage Pizza</h3>
+        <p id="itemdetails">$7.83   |  Pizza with sausage</p>
+        <h3 id="menuitem">Bacon Stuffed Waffles</h3>
+        <p id="itemdetails">$7.92   |  Waffle stufed with bacon bits topped with blueberries and syrup</p>
+        <h3 id="menuitem">LoneStar Ribs</h3>
+        <p id="itemdetails">$12.36  |  The messiest ribs ever known to man.</p>
         <hr>
 
-        <h2 id="menu">Drinks</h2>
-        <h3 id="menuitem">Pepsi</h3>
-        <p id="itemdetails">$2.50 |  Cold Bottle of Pepsi</p>
+        <h2 id="events">Events</h2>
+        <hr>
+        <h3 id="event">Taco Tuesday</h3>
+        <p id="eventLoc">Alberta Canada</p>
+        <h3 id="event">Chicken Gnocci Challenge</h3>
+        <p id="eventLoc">Coslavo, Mexico</p>
+        <h3 id="event">Combos & Calories</h3>
+        <p id="eventLoc">Las Angelos, California</p>
+        <h3 id="event">Lobster Mania</h3>
+        <p id="eventLoc">Nugget, Delaware</p>
+        <h3 id="event">Gator Gauntlet</h3>
+        <p id="eventLoc">Tallahasse, Florida</p>
     </main>
     
 </body>
