--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,6 @@
         <h2 id="menu">Menu</h3>
             <hr>
 
-            <div id="menuDiv">
-
-            </div>
         <h2 id="menu">Entrees</h2>
         <h3 id="menuitem">Cheeseburger</h3>
         <p id="itemdetails">$12.85  |  Burger with Cheese</p>
@@ -36,15 +33,15 @@
         <h2 id="events">Events</h2>
         <hr>
         <h3 id="event">Taco Tuesday</h3>
-        <p id="eventLoc">Alberta Canada</p>
+        <p id="eventDate">Alberta Canada</p>
         <h3 id="event">Chicken Gnocci Challenge</h3>
-        <p id="eventLoc">Coslavo, Mexico</p>
+        <p id="eventDate">Coslavo, Mexico</p>
         <h3 id="event">Combos & Calories</h3>
-        <p id="eventLoc">Las Angelos, California</p>
+        <p id="eventDate">Las Angelos, California</p>
         <h3 id="event">Lobster Mania</h3>
-        <p id="eventLoc">Nugget, Delaware</p>
+        <p id="eventDate">Nugget, Delaware</p>
         <h3 id="event">Gator Gauntlet</h3>
-        <p id="eventLoc">Tallahasse, Florida</p>
+        <p id="eventDate">Tallahasse, Florida</p>
     </main>
     
 </body>
