--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,13 @@
     <h1 id="title">FARTHEST CORNERS</h1>
 
     <main>
-        <button id="btnEvent">Check Out Our Events</button>
         <h2 id="menu">Menu</h3>
             <hr>
 
             <div id="menuDiv">
 
             </div>
-        <h2 id="menu">Entrees</h2>
+        <!-- <h2 id="menu">Entrees</h2>
         <h3 id="menuitem">Cheeseburger</h3>
         <p id="itemdetails">$12.85  |  Burger with Cheese</p>
         <h3 id="menuitem">Lobster</h3>
@@ -30,7 +29,7 @@
         <h3 id="menuitem">Bacon Stuffed Waffles</h3>
         <p id="itemdetails">$7.92   |  Waffle stufed with bacon bits topped with blueberries and syrup</p>
         <h3 id="menuitem">LoneStar Ribs</h3>
-        <p id="itemdetails">$12.36  |  The messiest ribs ever known to man.</p>
+        <p id="itemdetails">$12.36  |  The messiest ribs ever known to man.</p> -->
         <hr>
 
         <h2 id="events">Events</h2>
