--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
         <h2 id="menu">Menu</h3>
             <hr>
 
-            <div id="menuDiv">
+            <section id="menuDiv">
 
-            </div>
+            </section>
         <!-- <h2 id="menu">Entrees</h2>
         <h3 id="menuitem">Cheeseburger</h3>
         <p id="itemdetails">$12.85  |  Burger with Cheese</p>
@@ -30,7 +30,7 @@
         <p id="itemdetails">$7.92   |  Waffle stufed with bacon bits topped with blueberries and syrup</p>
         <h3 id="menuitem">LoneStar Ribs</h3>
         <p id="itemdetails">$12.36  |  The messiest ribs ever known to man.</p> -->
-        <hr>
+        <!-- <hr>
 
         <h2 id="events">Events</h2>
         <hr>
@@ -43,7 +43,7 @@
         <h3 id="event">Lobster Mania</h3>
         <p id="eventLoc">Nugget, Delaware</p>
         <h3 id="event">Gator Gauntlet</h3>
-        <p id="eventLoc">Tallahasse, Florida</p>
+        <p id="eventLoc">Tallahasse, Florida</p> -->
     </main>
     
 </body>
