Events load now

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,14 @@
         <p id="itemdetails">$7.92   |  Waffle stufed with bacon bits topped with blueberries and syrup</p>
         <h3 id="menuitem">LoneStar Ribs</h3>
         <p id="itemdetails">$12.36  |  The messiest ribs ever known to man.</p> -->
-        <!-- <hr>
+        <!-- --><hr>
+        <h2 id="events">Events</h3>
+            <hr>
 
-        <h2 id="events">Events</h2>
+            <section id="eventsDiv">
+
+            </section> 
+         <!--<h2 id="events">Events</h2>
         <hr>
         <h3 id="event">Taco Tuesday</h3>
         <p id="eventDate">Alberta Canada</p>
