Started the /admin front-end route

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Farthest Corners Foodtruck</title>
     <link rel="stylesheet" href="site.css">
     <script src="site.js" defer></script>
     
