added static.js, added events.html, attempted to work on making my last post work.

--- a/public/events.html
+++ b/public/events.html
@@ -13,17 +13,10 @@
     <h1 id="title">FARTHEST CORNERS</h1>
 
     <main>
-        <h2 id="menu">Menu</h2>
-            <hr>
-
-            <section id="menuDiv">
-
-            </section>
-        <hr>
         <h2 id="events">Events</h2>
             <hr>
 
-            <section id="eventsDiv">
+            <section id="eventDiv">
 
             </section> 
          
