fixed events.html page and changed getEvent() to getEventById()

--- a/public/events.html
+++ b/public/events.html
@@ -13,7 +13,7 @@
     <h1 id="title">FARTHEST CORNERS</h1>
 
     <main>
-        <h2 id="events">Events</h2>
+        <h2 id="events">Event</h2>
             <hr>
 
             <section id="eventDiv">
