Added some padding and title to add_form

--- a/public/add_form.html
+++ b/public/add_form.html
@@ -7,6 +7,8 @@
     <title>Add to Menu | Farthest Corners Foodtruck</title>
 </head>
 <body>
+    <h1 id="title">ADMIN PAGE</h1>
+
     <main>
         <div class="row">
             <div class="column">
